tests/errors/semantics/call_arguments_cannot_find_param.odl
main :: () -> void {
    add :: (a: int, b := 0, c := 0) -> int {
        return a + b + c;
    };

    s := add(d: 1, 1, 2);
    printint(s);
    println();
};
